# Information-Technology-Project-Management

./: .gitattributes  .gitignore  README.md  create_eval_data.py  docker-compose.yml  download.py  env.example  main.py  main_gpt.py  main_nodb.py  pyproject.toml  run.sh  script.py
.jukit/: .jukit_info.json  read-data_outhist.json
UET Mentor/: graph.html  requirements.txt
UET Mentor/Dataset/: all_context.json  all_question.json
UET Mentor/GraphRAG/: Adaptive_RAG.py  KnowledgeGraph_Neo4j.py  KnowledgeGrpah_Neo4j.py  Streamlit_RAG.py  Test_Streamlit.py  graph.html
UET Mentor/GraphRAG/vectorestore/faiss/: index.faiss  index.pkl
UET Mentor/data/docx/: Ecommerce.docx
demo/: demo.py
eval/: create_eval_data.py  ragas_eval.py  ragcheck.py  ragcheck_eval.py
examples/: questions.json
grag/: async_client.py  hybridrag.py  prompts.py  query.py  rag.py  utils.py  vectrag.py
