[project]
name = "information-technology-project-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "neo4j>=5.27.0",
    "networkx>=3.4.2",
    "nltk>=3.9.1",
    "ollama>=0.4.2",
    "openai>=1.56.1",
    "polars>=1.16.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "pyvis>=0.3.2",
    "streamlit-option-menu>=0.4.0",
    "streamlit>=1.40.2",
]
